in display, variables' and functions' names are now understandable. Plus I added some code for the files and such

--- a/FlightTracker/FlightTracker.csproj
+++ b/FlightTracker/FlightTracker.csproj
@@ -126,6 +126,7 @@
     </Compile>
     <Compile Include="Models\DataReaderServer.cs" />
     <Compile Include="Models\DataWriterClient.cs" />
+    <Compile Include="Models\FileHandler.cs" />
     <Compile Include="Models\SymbolTable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
